--- a/frontend/.streamlit/config.toml
+++ b/frontend/.streamlit/config.toml
@@ -3,7 +3,7 @@
 primaryColor = "#2E7D32"  # Forest Green - Main accent color for buttons and interactive elements
 
 # Main background color
-backgroundColor = "#FFFFFF"  # Pure White - Main background
+backgroundColor = "#FFFFF0"  # Pure White - Main background
 
 # Background color for sidebar and most widgets
 secondaryBackgroundColor = "#F1F8E9"  # Light Mint - Secondary panels and cards
