--- a/requirements.txt
+++ b/requirements.txt
@@ -74,7 +74,7 @@ requests==2.32.3
 rpds-py==0.20.1
 scikit-learn==1.5.2
 scipy==1.14.1
-sendgrid==6.11.0
+sendgrid-python==6.11.0
 six==1.16.0
 soupsieve==2.6
 SQLAlchemy==2.0.36
